--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Bienvenido al estudio fografico</h1>
     <h2>ingresa a ver nuestro trabajo </h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet mollitia harum est ipsam vitae! Veniam dolorum odio esse consequatur amet dolor error, recusandae quaerat libero aliquid aspernatur eligendi ad exercitationem.</p>
     
 </body>
 </html>
