color al titulo
le puse un color al titulo desde una rama

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>estudio fotografico</title>
 </head>
 <body>
-    <h1>Bienvenido al estudio fografico</h1>
+    <h1 style= color:blueviolet>Bienvenido al estudio fografico</h1>
     <h2>ingresa a ver nuestro trabajo </h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet mollitia harum est ipsam vitae! Veniam dolorum odio esse consequatur amet dolor error, recusandae quaerat libero aliquid aspernatur eligendi ad exercitationem.</p>
     
